fixes to checkout flow, countdown for all videos, less spacing above videos

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -47,8 +47,7 @@ header
   @media screen and (max-width:767px)
       padding-top:10px
 .l-vid
-  @media screen and (min-width:767px)
-    margin-top: 60px
+
   padding-left: 0px !important
   padding-right: 0px !important
   // margin-bottom: 110px older optin
@@ -61,8 +60,7 @@ header
     max-width: 1056px;
 
     height: 100%;
-    @media screen and (max-width:420px)
-      margin-top: 60px;
+    
   img
     @media screen and (max-width:767px)
       width:100%
@@ -77,7 +75,10 @@ header
   width: 100%;
   max-width: 800px;
   .trailer-view
-    margin-top: 40px;
+    @media screen and (max-width:767px)
+      margin-top: -40px;
+    @media screen and (max-width:420px)
+      margin-top: -20px;
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
