--- a/src/css/pages/launch-squeeze.styl
+++ b/src/css/pages/launch-squeeze.styl
@@ -215,8 +215,9 @@
     max-width: 98%;
     margin-top: 2px;
     input
-      text-align:center;
+      text-align:left;
       min-width: 100%
+
     .input
       max-width: 430px
     @media screen and (max-width:767px)
@@ -330,7 +331,7 @@
       padding-top: 1rem;
 
   .thumb
-    padding-top: 110px;
+    padding-top: 20px;
     @media screen and (max-width:420px)
       padding-top: 90px
     // margin-top:10px oldoptin
@@ -434,7 +435,7 @@
 
       color:white
   .trailer-top-row
-    z-index: 9999;
+    z-index: 999;
     position: relative;
   .l-body2
 
@@ -788,7 +789,18 @@
 #countdown2
   font-size: 2rem;
   text-align: center
+#countdown3
+  font-size: 2rem;
+  text-align: center
+#countdown4
+  font-size: 2rem;
+  text-align: center
+#countdown5
+  font-size: 2rem;
+  text-align: center
 
+.vid-container
+  margin-top:45px
 /*Eliminates padding, centers the thumbnail */
 
 body, html {
@@ -888,12 +900,12 @@ margin: 94px 20px 20px 20px;
 
 .lightbox-target .trailer-container
   display: none
-  margin-bottom:40px
-  @media screen and (max-width:420px)
-    margin-bottom: 80px
+  // hideforopencart margin-bottom:40px
+  // hideforopencart @media screen and (max-width:420px)
+  margin-bottom: 80px
 .video-one-target, .video-two-target, .video-three-target, .video-four-target
   display:none
-  padding-top: 110px
+  padding-top: 70px
 
 .lightbox-target2 {
 position: fixed;
